--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
     "@testing-library/react": "^15.0.7",
     "babel-jest": "^29.7.0",
     "jest": "^27.5.1",
